2007-08-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl-macs.el (cl-transform-lambda): Preserve the match-data.

2007-08-16  Glenn Morris  <rgm@gnu.org>

	* ps-print.el (ps-font-size): Doc fix.

2007-08-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el: Don't fiddle with vc-handled-backend.
	(vc-bzr-registered): Don't redundantly protect against
	file-error.  Actually use the format-specific code.
	(vc-bzr-buffer-nonblank-p): Remove.
	(vc-bzr-status): Change `kindchange' -> `kindchanged'.

2007-08-15  Glenn Morris  <rgm@gnu.org>

	* mail/undigest.el (rmail-digest-parse-rfc1153sloppy): Be even
	sloppier, for the sake of GNU Mailman.
	(rmail-digest-rfc1153): Initialize `result' correctly.

2007-08-14  Glenn Morris  <rgm@gnu.org>

	* simple.el (bad-packages-alist): New constant.
	(bad-package-check): New function.  Together, these two add
	elements to `after-load-alist' to check for problematic external
	packages.
	* emulation/cua-base.el: Move CUA-mode check to `bad-packages-alist'.

2007-08-13  Stephen Leake  <stephen_leake@stephe-leake.org>

	* pcvs-parse.el (cvs-parse-table): Handle additional instance of
	optional quotes around files in NEED-UPDATE . REMOVED case.

	* progmodes/ada-xref.el (ada-gnatls-args): Fix docstring.
	(ada-treat-cmd-string): Improve error message.
	(ada-do-file-completion): Call `ada-require-project-file', so
	project variables are set properly.
	(ada-prj-find-prj-file): Delete Emacs 20.2 support.
	(ada-gnatfind-buffer-name): New constant.
	(ada-find-any-references): Use new constant.  Set buffer name
	properly in compilation-start.  Toggle read-only properly.
	(ada-find-in-src-path): Fix spelling error in docstring.

	* progmodes/vhdl-mode.el (vhdl-update-progress-info): Avoid divide
	by zero error.

2007-08-13  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-send): Handle CTRL-D more carefully.

2007-08-12  Richard Stallman  <rms@gnu.org>
